# Scoring-SDKWorktest

./: CMakeLists.txt  CMakeSettings.json  README.md  README.txt
.-S/: CMakeCache.txt
[build/: CMakeCache.txt
include/: library.h
source/: library.cpp
tests/: test_main.cpp  test_sdk.hpp
